fix new web project
fix new web project

--- a/tpl/proj/web-home/conf.vm
+++ b/tpl/proj/web-home/conf.vm
@@ -1,3 +1,5 @@
 manifest=$!{project}/src/main/resources/META-INF/MANIFEST.MF
 spring=$!{project}/src/main/resources/META-INF/spring/${projectSpring}.xml
+ref=$!{project}/src/main/resources/META-INF/spring/${projectSpring}-ref.xml
 fragment=$!{project}/src/main/resources/OSGI-INF/deployment-fragment.xml
+security=$!{project}/src/main/resources/security/${security}.acf
