--- a/tpl/proj/web-home/conf.vm
+++ b/tpl/proj/web-home/conf.vm
@@ -3,3 +3,4 @@ spring=$!{project}/src/main/resources/META-INF/spring/${projectSpring}.xml
 ref=$!{project}/src/main/resources/META-INF/spring/${projectSpring}-ref.xml
 fragment=$!{project}/src/main/resources/OSGI-INF/deployment-fragment.xml
 security=$!{project}/src/main/resources/security/${security}.acf
+pom=$!{project}/pom.xml
