tunning create project
tunning create project

--- a/tpl/controller/controller.vm
+++ b/tpl/controller/controller.vm
@@ -8,10 +8,10 @@ import org.springframework.web.bind.annotation.RequestMethod;
 import com.alibaba.common.lang.StringUtil;
 
 @Controller
-public class $!{name} {
+public class $!{className} {
 
-    public static final String VIEW = "view.vm";
-    public static final String LIST = "list.vm";
+    public static final String VIEW = "$!{name}/view.vm";
+    public static final String LIST = "$!{name}/list.vm";
     public static final String OK   = "ok";
     public static final String STAT = "stat";
 
@@ -23,7 +23,7 @@ public class $!{name} {
      * @param id
      * @return EDIT
      */
-    @RequestMapping(value = "/view.htm", method = RequestMethod.GET)
+    @RequestMapping(value = "/$!{name}/view.htm", method = RequestMethod.GET)
     public String view(ModelMap modelMap, String id) {
         if (!StringUtil.isEmpty(id)) {
             modelMap.addAttribute("opcode", "modify");
@@ -38,7 +38,7 @@ public class $!{name} {
      * @param modelMap {@link ModelMap}
      * @param param
      */
-    @RequestMapping(value = "/add.json", method = RequestMethod.POST)
+    @RequestMapping(value = "/$!{name}/add.json", method = RequestMethod.POST)
     public void add(ModelMap modelMap, String param) {
         Object result = null;
         modelMap.addAttribute("result", result);
@@ -50,7 +50,7 @@ public class $!{name} {
      * @param modelMap {@link ModelMap}
      * @param id
      */
-    @RequestMapping(value = "/delete.json", method = RequestMethod.POST)
+    @RequestMapping(value = "/$!{name}/delete.json", method = RequestMethod.POST)
     public void delete(ModelMap modelMap, String id) {
         Object result = null;
         modelMap.addAttribute("result", result);
@@ -62,7 +62,7 @@ public class $!{name} {
      * @param modelMap {@link ModelMap}
      * @param param
      */
-    @RequestMapping(value = "/edit.json", method = RequestMethod.POST)
+    @RequestMapping(value = "/$!{name}/edit.json", method = RequestMethod.POST)
     public void edit(ModelMap modelMap, String param) {
         Object result = null;
         modelMap.addAttribute("result", result);
@@ -76,7 +76,7 @@ public class $!{name} {
      * @param query 
      * @return LIST
      */
-    @RequestMapping(value = "/list.htm", method = { RequestMethod.GET, RequestMethod.POST })
+    @RequestMapping(value = "/$!{name}/list.htm", method = { RequestMethod.GET, RequestMethod.POST })
     public String list(ModelMap modelMap, String query) {
         Object result = null;
         modelMap.addAttribute("result", result);
@@ -90,7 +90,7 @@ public class $!{name} {
      * @param id        ID
      * @param status
      */
-    @RequestMapping(value = "/editStatus.json", method = { RequestMethod.GET, RequestMethod.POST })
+    @RequestMapping(value = "/$!{name}/editStatus.json", method = { RequestMethod.GET, RequestMethod.POST })
     public void editStatus(ModelMap modelMap, Long id, String status) {
         Object result = null;
         modelMap.addAttribute("result", result);
