tunning create project
tunning create project: core-service, biz-service-impl, web-home

--- a/tpl/proj/core-service/conf.vm
+++ b/tpl/proj/core-service/conf.vm
@@ -2,3 +2,4 @@ manifest=$!{project}/src/main/resources/META-INF/MANIFEST.MF
 spring=$!{project}/src/main/resources/META-INF/spring/${projectSpring}.xml
 fragment=$!{project}/src/main/resources/OSGI-INF/deployment-fragment.xml
 pom=$!{project}/pom.xml
+project=$!{project}/.project
