--- a/tpl/proj/biz-service-impl/manifest.vm
+++ b/tpl/proj/biz-service-impl/manifest.vm
@@ -5,5 +5,5 @@ Bundle-SymbolicName: $!{projectSymbolicName};singleton:=true
 Bundle-Version: 1.0.0
 Bundle-Vendor: Alipay
 Eclipse-LazyStart: false
-Require-Bundle: com.alipay.$!{system}.common.service.facade, com.alipay.$!{system}.biz.shared
+Require-Bundle: com.alipay.$!{system}.biz.shared
 Resource-Filter: $!{projectSpring}.xml
