finish add project to test project classpath
finish add project to test project classpath

--- a/tpl/proj/dependency.vm
+++ b/tpl/proj/dependency.vm
@@ -8,7 +8,7 @@
 #elseif($!type=="module")
 
     <module>$!{module}</module>
-#elseif($!type=="project")
+#elseif($!type=="test")
 
 		<dependency>
 			<groupId>com.alipay.$!{system}</groupId>
