--- a/tpl/service/service.vm
+++ b/tpl/service/service.vm
@@ -1,5 +1,5 @@
-package $!{servicePackage};
+package {servicePackage};
 
-public interface $!{serviceName} {
+public interface {serviceName} {
 	
 }
