--- a/tpl/dal/daointerface.vm
+++ b/tpl/dal/daointerface.vm
@@ -1,21 +1,21 @@
-package $!{packageRoot}.daointerface;
+package {packageRoot}.daointerface;
 
 import java.util.List;
 import java.util.Map;
 
 import org.springframework.dao.DataAccessException;
 
-import $!{packageRoot}.dataobject.$!{table.className}DO;
+import {packageRoot}.dataobject.{table.className}DO;
 
-public interface $!{table.className}DAO {
+public interface {table.className}DAO {
 
-	public void insert($!{table.className}DO $!{table.objectName}DO) throws DataAccessException;
+	public void insert({table.className}DO {table.objectName}DO) throws DataAccessException;
 
-	public void delete($!{table.className}DO $!{table.objectName}DO) throws DataAccessException;
+	public void delete({table.className}DO {table.objectName}DO) throws DataAccessException;
 
-	public void update($!{table.className}DO $!{table.objectName}DO) throws DataAccessException;
+	public void update({table.className}DO {table.objectName}DO) throws DataAccessException;
 
-	public List<$!{table.className}DO> query(Map<String,String> parameters) throws DataAccessException;
+	public List<{table.className}DO> query(Map<String,String> parameters) throws DataAccessException;
 	
 	public long queryCount(Map<String,String> parameters) throws DataAccessException;
 
