--- a/tpl/proj/core-service/project.vm
+++ b/tpl/proj/core-service/project.vm
@@ -1,13 +1,13 @@
 <projectDescription>
-  <name>$!{project}</name>
-  <comment>Alipay $!{project}. Genereated By SDT.</comment>
+  <name>{project}</name>
+  <comment>Alipay {project}. Genereated By SDT.</comment>
   <projects>
-    <project>$!{system}-biz-shared</project>
-    <project>$!{system}-common-dal</project>
-    <project>$!{system}-common-service-facade</project>
-    <project>$!{system}-common-service-integration</project>
-    <project>$!{system}-common-util</project>
-    <project>$!{system}-core-model</project>
+    <project>{system}-biz-shared</project>
+    <project>{system}-common-dal</project>
+    <project>{system}-common-service-facade</project>
+    <project>{system}-common-service-integration</project>
+    <project>{system}-common-util</project>
+    <project>{system}-core-model</project>
   </projects>
   <buildSpec>
     <buildCommand>
