--- a/tpl/proj/web-home/pom.vm
+++ b/tpl/proj/web-home/pom.vm
@@ -3,19 +3,19 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<parent>
-		<groupId>com.alipay.$!{system}</groupId>
-		<artifactId>$!{system}-parent</artifactId>
+		<groupId>com.alipay.{system}</groupId>
+		<artifactId>{system}-parent</artifactId>
 		<version>1.0.0</version>
 		<relativePath>../../../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.alipay.$!{system}</groupId>
-	<artifactId>$!{project}</artifactId>
+	<groupId>com.alipay.{system}</groupId>
+	<artifactId>{project}</artifactId>
 	<version>1.0.0</version>
 
-	<name>Alipay $!{project}</name>
-	<description>Alipay $!{project}</description>
+	<name>Alipay {project}</name>
+	<description>Alipay {project}</description>
 	<url>http://home.alipay.net</url>
 
 	<packaging>jar</packaging>
@@ -23,8 +23,8 @@
 	<dependencies>
 		<!-- project depends -->
 		<dependency>
-			<groupId>com.alipay.$!{system}</groupId>
-			<artifactId>$!{system}-web-home</artifactId>
+			<groupId>com.alipay.{system}</groupId>
+			<artifactId>{system}-web-home</artifactId>
 		</dependency>
 		<!-- lib depends -->
 	</dependencies>
