--- a/tpl/proj/biz-service-impl/conf.vm
+++ b/tpl/proj/biz-service-impl/conf.vm
@@ -1,6 +1,6 @@
 manifest={project}/src/main/resources/META-INF/MANIFEST.MF
-spring={project}/src/main/resources/META-INF/spring/${projectSpring}.xml
-ref={project}/src/main/resources/META-INF/spring/${projectSpring}-ref.xml
+spring={project}/src/main/resources/META-INF/spring/{projectSpring}.xml
+ref={project}/src/main/resources/META-INF/spring/{projectSpring}-ref.xml
 fragment={project}/src/main/resources/OSGI-INF/deployment-fragment.xml
 pom={project}/pom.xml
 project={project}/.project
