--- a/tpl/proj/core-service/conf.vm
+++ b/tpl/proj/core-service/conf.vm
@@ -1,5 +1,5 @@
 manifest={project}/src/main/resources/META-INF/MANIFEST.MF
-spring={project}/src/main/resources/META-INF/spring/${projectSpring}.xml
+spring={project}/src/main/resources/META-INF/spring/{projectSpring}.xml
 fragment={project}/src/main/resources/OSGI-INF/deployment-fragment.xml
 pom={project}/pom.xml
 project={project}/.project
