--- a/tpl/proj/web-home/conf.vm
+++ b/tpl/proj/web-home/conf.vm
@@ -1,7 +1,7 @@
 manifest={project}/src/main/resources/META-INF/MANIFEST.MF
-spring={project}/src/main/resources/META-INF/spring/${projectSpring}.xml
-ref={project}/src/main/resources/META-INF/spring/${projectSpring}-ref.xml
+spring={project}/src/main/resources/META-INF/spring/{projectSpring}.xml
+ref={project}/src/main/resources/META-INF/spring/{projectSpring}-ref.xml
 fragment={project}/src/main/resources/OSGI-INF/deployment-fragment.xml
-security={project}/src/main/resources/security/${security}.acf
+security={project}/src/main/resources/security/{security}.acf
 pom={project}/pom.xml
 project={project}/.project
