--- a/tpl/proj/web-home/fragment.vm
+++ b/tpl/proj/web-home/fragment.vm
@@ -3,7 +3,7 @@
 <fragment>
     <extension target="jboss-app#MODULE">
 		<module>
-    		<java>${bundle.fileName}</java>
+    		<service>${bundle.fileName}</service>
 		</module>
 	</extension>
 </fragment>
