--- a/tpl/client/conf.vm
+++ b/tpl/client/conf.vm
@@ -1,3 +1,6 @@
-xml		={project}/src/main/resources/spring/{xml}
-impl	={project}/src/main/java/{packageDir}/impl/{impl}.java
-client	={project}/src/main/java/{packageDir}/{client}.java
+xml		={X} {project}/src/main/resources/META-INF/spring/{xml} i </beans>
+impl	=F {project}/src/main/java/{packageDir}/impl/{impl}.java
+client	=F {project}/src/main/java/{packageDir}/{client}.java
+
+package =P {project}/src/main/java com.alipay.{system}.joke
+sql		=D {project}/src/main/resources/sqlxxx/aaa
