--- a/tpl/dal/conf.vm
+++ b/tpl/dal/conf.vm
@@ -1,4 +1,4 @@
-daointerface={projectName}/src/main/java/{packageRootDir}/daointerface/{table.className}DAO.java
-dataobject	={projectName}/src/main/java/{packageRootDir}/dataobject/{table.className}DO.java
-ibatis		={projectName}/src/main/java/{packageRootDir}/ibatis/Ibatis{table.className}DAO.java
-sqlmap		={projectName}/src/main/resources/sqlmap/{table.className}-sqlmap-mapping.xml
+daointerface=F {projectName}/src/main/java/{packageRootDir}/daointerface/{table.className}DAO.java
+dataobject	=F {projectName}/src/main/java/{packageRootDir}/dataobject/{table.className}DO.java
+ibatis		=F {projectName}/src/main/java/{packageRootDir}/ibatis/Ibatis{table.className}DAO.java
+sqlmap		=F {projectName}/src/main/resources/sqlmap/{table.className}-sqlmap-mapping.xml
