--- a/tpl/proj/core-service/conf.vm
+++ b/tpl/proj/core-service/conf.vm
@@ -1,5 +1,5 @@
-manifest={project}/src/main/resources/META-INF/MANIFEST.MF
-spring={project}/src/main/resources/META-INF/spring/{projectSpring}.xml
-fragment={project}/src/main/resources/OSGI-INF/deployment-fragment.xml
-pom={project}/pom.xml
-project={project}/.project
+manifest	=F {project}/src/main/resources/META-INF/MANIFEST.MF
+spring		=F {project}/src/main/resources/META-INF/spring/{projectSpring}.xml
+fragment	=F {project}/src/main/resources/OSGI-INF/deployment-fragment.xml
+pom			=F {project}/pom.xml
+project		=F {project}/.project
