--- a/tpl/proj/core-service/conf.vm
+++ b/tpl/proj/core-service/conf.vm
@@ -3,3 +3,5 @@ spring		=F {project}/src/main/resources/META-INF/spring/{projectSpring}.xml
 fragment	=F {project}/src/main/resources/OSGI-INF/deployment-fragment.xml
 pom			=F {project}/pom.xml
 project		=F {project}/.project
+java		=P {project}/src/main/java {defaultPackage}
+classes		=D {project}/target/classes
