--- a/tpl/dal/dataobject.vm
+++ b/tpl/dal/dataobject.vm
@@ -1,9 +1,20 @@
+# today = new Date();
+# user = java.lang.System.getenv("USERNAME");
+/**
+ * Alipay.com Inc.
+ * Copyright (c) 2004-{today.getFullYear()} All Rights Reserved.
+ */
 package {packageRoot}.dataobject;
 
 # for(i in table.getImports()) {
 import {table.getImports()[i]};
 
 # }
+/**
+ * 
+ * @author {user}
+ * @version $$Id: {client}.java, v 0.1 {new Date().toLocaleString()} {user} Exp $$
+ */
 public class {table.className}DO {
 
 # for(i in table.columns) {
