--- a/tpl/controller/controller.vm
+++ b/tpl/controller/controller.vm
@@ -1,3 +1,9 @@
+# today = new Date();
+# user = java.lang.System.getenv("USERNAME");
+/**
+ * Alipay.com Inc.
+ * Copyright (c) 2004-{today.getFullYear()} All Rights Reserved.
+ */
 package {packageName};
 
 import org.springframework.stereotype.Controller;
@@ -7,6 +13,11 @@ import org.springframework.web.bind.annotation.RequestMethod;
 
 import com.alibaba.common.lang.StringUtil;
 
+/**
+ * 
+ * @author {user}
+ * @version $$Id: {client}.java, v 0.1 {new Date().toLocaleString()} {user} Exp $$
+ */
 @Controller
 public class {className} {
 
