--- a/tpl/dal/daointerface.vm
+++ b/tpl/dal/daointerface.vm
@@ -1,3 +1,9 @@
+# today = new Date();
+# user = java.lang.System.getenv("USERNAME");
+/**
+ * Alipay.com Inc.
+ * Copyright (c) 2004-{today.getFullYear()} All Rights Reserved.
+ */
 package {packageRoot}.daointerface;
 
 import java.util.List;
@@ -7,6 +13,11 @@ import org.springframework.dao.DataAccessException;
 
 import {packageRoot}.dataobject.{table.className}DO;
 
+/**
+ * 
+ * @author {user}
+ * @version $$Id: {client}.java, v 0.1 {new Date().toLocaleString()} {user} Exp $$
+ */
 public interface {table.className}DAO {
 
 	public void insert({table.className}DO {table.objectName}DO) throws DataAccessException;
