--- a/tpl/dependency/dependency.vm
+++ b/tpl/dependency/dependency.vm
@@ -3,7 +3,7 @@
 			<dependency>
 				<groupId>{groupId}</groupId>
 				<artifactId>{artifactId}</artifactId>
-				<version>1.0.0</version>
+				<version>{version}</version>
 			</dependency>
 # } else if(type=="module") {
 
